--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -13,6 +13,9 @@ jobs:
       TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
 
     steps:
+      - name: Start Cron
+        run: echo "Starting Cron Job!"
+
       - name: Checkout repo
         uses: actions/checkout@v3
 
